# mcp

./: pyproject.toml
arm_kb_search/: __init__.py  config.py  evaluation.py  loaders.py  search.py
embedding-generation/: document_chunking.py  eval_questions.json  evaluate_retrieval.py  generate-chunks.py  vector-db-sources.csv
embedding-generation/tests/: test_generate_chunks.py
mcp-local/: Dockerfile  server.py
mcp-local/utils/: config.py  kb_response.py
