[project]
name = "arm-kb-search"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "rank-bm25",
  "sentence-transformers",
  "usearch",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arm_kb_search*"]
